Saved Model locally & applied splitting before augmentation

--- a/Car detection project.ipynb
+++ b/Car detection project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 75,
    "id": "5377709d",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,8 @@
     "from sklearn import svm\n",
     "import matplotlib.pyplot as plt\n",
     "from skimage.transform import rescale, resize, downscale_local_mean\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n",
+    "import pickle"
    ]
   },
   {
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "f8c75240",
    "metadata": {},
    "outputs": [],
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "25791f08",
    "metadata": {},
    "outputs": [
@@ -74,7 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "id": "2f14732c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## apply the flipping augmentation\n",
+    "def apply_flippling_augmentation(images):\n",
+    "    flipped_images=images.copy()\n",
+    "    for index in range(len(flipped_images)):\n",
+    "        flipped_images[index] =np.flipud(flipped_images[index])\n",
+    "    return flipped_images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "c5765f35",
    "metadata": {},
    "outputs": [],
@@ -106,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "126f52f2",
    "metadata": {},
    "outputs": [],
@@ -123,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "b8894197",
    "metadata": {},
    "outputs": [
@@ -154,7 +170,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
+   "id": "39d800ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def list_splitter(list_to_split, ratio):\n",
+    "    elements = len(list_to_split)\n",
+    "    middle = int(elements * ratio)\n",
+    "    return list_to_split[:middle], list_to_split[middle:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "b40ad9a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Divide the data set into train and test before augmenting\n",
+    "vehicles_train, vehicles_test = list_splitter(vehicles,0.7)\n",
+    "non_vehicles_train, non_vehicles_test = list_splitter(non_vehicles,0.7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "id": "9b932bfa",
    "metadata": {
     "scrolled": false
@@ -188,16 +229,16 @@
    "source": [
     "## apply the brightness augmentation on the dataset\n",
     "brightness_value = 50/255\n",
-    "brighted_vehicles = apply_brightness_augmentation(np.array(vehicles), brightness_value)\n",
-    "brighted_non_vehicles = apply_brightness_augmentation(np.array(non_vehicles), brightness_value)\n",
+    "brighted_vehicles = apply_brightness_augmentation(np.array(vehicles_train), brightness_value)\n",
+    "brighted_non_vehicles = apply_brightness_augmentation(np.array(non_vehicles_train), brightness_value)\n",
     "\n",
     "show_samples(brighted_vehicles, 5)\n",
-    "show_samples(vehicles, 5)\n"
+    "show_samples(vehicles_train, 5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "id": "da3453e7",
    "metadata": {},
    "outputs": [
@@ -229,15 +270,15 @@
    "source": [
     "## apply the rescaling augmentation on the dataset\n",
     "rescaling_value= 0.6\n",
-    "rescaled_vehicles=apply_rescaling_augmentation(vehicles,rescaling_value)\n",
-    "rescaled_non_vehicles=apply_rescaling_augmentation(non_vehicles,rescaling_value)\n",
+    "rescaled_vehicles=apply_rescaling_augmentation(vehicles_train,rescaling_value)\n",
+    "rescaled_non_vehicles=apply_rescaling_augmentation(non_vehicles_train,rescaling_value)\n",
     "show_samples(rescaled_vehicles,5)\n",
     "show_samples(rescaled_non_vehicles,5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "id": "c9d1eb2a",
    "metadata": {},
    "outputs": [
@@ -251,28 +292,13 @@
     }
    ],
    "source": [
-    "print(\"Size of original image = \" + str(vehicles[1].shape))\n",
+    "print(\"Size of original image = \" + str(vehicles_train[1].shape))\n",
     "print(\"Size of rescaled image = \" + str(rescaled_vehicles[1].shape))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "2f14732c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## apply the flipping augmentation\n",
-    "def apply_flippling_augmentation(images):\n",
-    "    flipped_images=images.copy()\n",
-    "    for index in range(len(flipped_images)):\n",
-    "        flipped_images[index] =np.flipud(flipped_images[index])\n",
-    "    return flipped_images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "id": "da24ef47",
    "metadata": {},
    "outputs": [
@@ -303,15 +329,15 @@
    ],
    "source": [
     "## apply the flipping augmentation on the dataset\n",
-    "flipped_vehicles=apply_flippling_augmentation(vehicles)\n",
-    "flipped_non_vehicles=apply_flippling_augmentation(non_vehicles)\n",
+    "flipped_vehicles=apply_flippling_augmentation(vehicles_train)\n",
+    "flipped_non_vehicles=apply_flippling_augmentation(non_vehicles_train)\n",
     "show_samples(flipped_vehicles,5)\n",
     "show_samples(flipped_non_vehicles,5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "id": "0dd9d3f2",
    "metadata": {},
    "outputs": [],
@@ -321,15 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f2ca111c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "id": "b9d0d271",
    "metadata": {},
    "outputs": [],
@@ -344,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "id": "662ebf4c",
    "metadata": {
     "scrolled": true
@@ -354,18 +372,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8792, 64, 64, 3)\n",
-      "(8792, 64, 64, 3)\n",
-      "(8792, 38, 38, 3)\n",
-      "(8792, 64, 64, 3)\n"
+      "(6154, 64, 64, 3)\n",
+      "(6154, 64, 64, 3)\n",
+      "(6154, 38, 38, 3)\n",
+      "(6154, 64, 64, 3)\n"
      ]
     }
    ],
    "source": [
     "#Chosen types of augmentation to train the model with.\n",
-    "augmenteted_vehicles=[vehicles, flipped_vehicles,brighted_vehicles]\n",
-    "augmenteted_non_vehicles=[non_vehicles, flipped_non_vehicles,brighted_non_vehicles]\n",
-    "print(np.shape(vehicles))\n",
+    "augmenteted_vehicles=[vehicles_train, flipped_vehicles,brighted_vehicles]\n",
+    "augmenteted_non_vehicles=[non_vehicles_train, flipped_non_vehicles,brighted_non_vehicles]\n",
+    "print(np.shape(vehicles_train))\n",
     "print(np.shape(flipped_vehicles))\n",
     "print(np.shape(rescaled_vehicles))\n",
     "print(np.shape(brighted_vehicles))\n"
@@ -373,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "id": "d740d583",
    "metadata": {},
    "outputs": [],
@@ -388,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 63,
    "id": "791cfc80",
    "metadata": {},
    "outputs": [
@@ -396,7 +414,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(26376, 64, 64, 3)\n"
+      "Shape of the total Images after all augmentation methods used(18462, 64, 64, 3)\n"
      ]
     }
    ],
@@ -410,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "id": "d078aff3",
    "metadata": {},
    "outputs": [],
@@ -422,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "id": "67a30731",
    "metadata": {},
    "outputs": [
@@ -442,47 +460,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "id": "bfb90145",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Split the data set and construct X and y\n",
-    "X = np.vstack((vehicles_hog_features,non_vehicles_hog_features)) \n",
-    "y = np.hstack((np.ones(len(stacked_augmented_vehicles)),np.zeros(len(stacked_augmented_non_vehicles))))\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X_train = np.vstack((vehicles_hog_features,non_vehicles_hog_features)) \n",
+    "y_train = np.hstack((np.ones(len(stacked_augmented_vehicles)),np.zeros(len(stacked_augmented_non_vehicles))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 67,
    "id": "da650594",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy scores:\n",
-      " [0.99652778 0.98489114 0.96715465 0.99436937 0.99878003]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "SVC()"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Train the model using cross validation\n",
     "clf = svm.SVC(kernel='rbf')\n",
-    "\n",
-    "scores = cross_val_score(clf, X, y, cv=5, n_jobs=-1, scoring='accuracy')\n",
-    "\n",
-    "print(\"Accuracy scores:\\n\", scores)\n",
-    "\n",
-    "# clf.fit(X_train, y_train)\n",
+    "clf.fit(X_train, y_train)\n",
     "# y_pred = clf.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
+   "id": "d1b65983",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Preparing the test data \n",
+    "vehicles_test_hog_features = extract_hog(vehicles_test)\n",
+    "non_vehicles_test_hog_features = extract_hog(non_vehicles_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "082f9b32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = np.vstack((vehicles_test_hog_features,non_vehicles_test_hog_features)) \n",
+    "y_test = np.hstack((np.ones(len(vehicles_test)),np.zeros(len(non_vehicles_test))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "id": "a8bddd96",
    "metadata": {},
    "outputs": [
@@ -490,18 +527,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9947447447447447\n"
+      "Accuracy: 0.9915556389566523\n"
      ]
     }
    ],
    "source": [
     "# Model Accuracy: how often is the classifier correct?\n",
-    "#print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))"
+    "y_pred = clf.predict(X_test)\n",
+    "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 71,
    "id": "e312660e",
    "metadata": {},
    "outputs": [
@@ -511,12 +549,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.99      1.00      0.99      5399\n",
-      "         1.0       1.00      0.99      0.99      5257\n",
+      "         0.0       1.00      0.99      0.99      2691\n",
+      "         1.0       0.99      1.00      0.99      2638\n",
       "\n",
-      "    accuracy                           0.99     10656\n",
-      "   macro avg       0.99      0.99      0.99     10656\n",
-      "weighted avg       0.99      0.99      0.99     10656\n",
+      "    accuracy                           0.99      5329\n",
+      "   macro avg       0.99      0.99      0.99      5329\n",
+      "weighted avg       0.99      0.99      0.99      5329\n",
       "\n"
      ]
     }
@@ -524,6 +562,18 @@
    "source": [
     "# Classification Report\n",
     "print(metrics.classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "84abdd65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the model to disk\n",
+    "filename = 'car_detect_model.sav'\n",
+    "pickle.dump(clf, open(filename, 'wb'))"
    ]
   }
  ],
