some new changes

--- a/Vehicle Detection with Background Subtraction and Contours..ipynb
+++ b/Vehicle Detection with Background Subtraction and Contours..ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "id": "lrJi4G9FHRM-"
    },
@@ -33,6 +33,7 @@
     "import cv2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from time import sleep\n",
     "%matplotlib inline"
    ]
   },
@@ -159,20 +160,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "id": "boWEey9wPuz5"
    },
    "outputs": [],
    "source": [
     "# load a video\n",
-    "video = cv2.VideoCapture('media/videos/carsvid.wmv')\n",
+    "video = cv2.VideoCapture('trimmed1.mp4')\n",
     "\n",
     "# You can set custom kernel size if you want.\n",
     "kernel = None\n",
     "\n",
     "# Initialize the background object.\n",
-    "backgroundObject = cv2.createBackgroundSubtractorMOG2(detectShadows = True)\n",
+    "backgroundObject = cv2.createBackgroundSubtractorMOG2(varThreshold=10,detectShadows = True)\n",
     "\n",
     "while True:\n",
     "    \n",
@@ -203,7 +204,7 @@
     "    \n",
     "    # Create a copy of the frame to draw bounding boxes around the detected cars.\n",
     "    frameCopy = frame.copy()\n",
-    "    \n",
+    "    sleep(0.05)\n",
     "    # loop over each contour found in the frame.\n",
     "    for cnt in contours:\n",
     "        \n",
