--- a/lil.ipynb
+++ b/lil.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(438, 500, 3)\n"
+      "(858, 984, 3)\n"
      ]
     }
    ],
    "source": [
-    "cap = cv2.VideoCapture('trimmed3.mp4')\n",
+    "cap = cv2.VideoCapture('trimmed1.mp4')\n",
     "\n",
     "# Check if camera opened successfully\n",
     "if (cap.isOpened()== False): \n",
@@ -69,15 +69,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(199, 438, 500, 3)\n",
-      "(438, 500, 3)\n"
+      "(199, 858, 984, 3)\n",
+      "(858, 984, 3)\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,19 +119,19 @@
     "\n",
     "#io.imshow(thresh)\n",
     "#pp=cv2.equalizeHist(imgdiff)\n",
-    "cv2.imshow( \"lol2\", thresh)\n",
+    "cv2.imshow( \"lol2\", imgdiff)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load a video\n",
-    "video = cv2.VideoCapture('trimmed3.mp4')\n",
+    "video = cv2.VideoCapture('trimmed1.mp4')\n",
     "\n",
     "# You can set custom kernel size if you want.\n",
     "kernel = None\n",
@@ -154,7 +154,7 @@
     "    imgdiff=cv2.absdiff(np.uint8(img1), np.uint8(img2))\n",
     "\n",
     "    #imgdiff = np.asarray(imgdiff, np.float64)\n",
-    "    _, thresh = cv2.threshold(imgdiff, 10, 255, cv2.THRESH_BINARY)\n",
+    "    _, thresh = cv2.threshold(imgdiff, 50, 255, cv2.THRESH_BINARY)\n",
     "    fgmask=thresh\n",
     "    temp=np.copy(fgmask)\n",
     "    #_, fgmask = cv2.threshold(fgmask, 200, 255, cv2.THRESH_BINARY)\n",
