--- a/lil.ipynb
+++ b/lil.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,14 +119,14 @@
     "\n",
     "#io.imshow(thresh)\n",
     "#pp=cv2.equalizeHist(imgdiff)\n",
-    "cv2.imshow( \"lol2\", imgdiff)\n",
+    "cv2.imshow( \"lol2\", thresh)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
     "    fgmask=thresh\n",
     "    temp=np.copy(fgmask)\n",
     "    #_, fgmask = cv2.threshold(fgmask, 200, 255, cv2.THRESH_BINARY)\n",
-    "  \n",
+    "    \n",
     "\n",
     "\n",
     "    kernel=np.ones((6,18),np.uint8)\n",
